[gd_scene load_steps=20 format=3 uid="uid://bhjv3h6oxgj4"]

[ext_resource type="Script" uid="uid://br0e13lot5wld" path="res://src/dino/vania/maps/VaniaRoom.gd" id="1_x4efj"]
[ext_resource type="PackedScene" uid="uid://bsg0351mx3b4u" path="res://addons/MetroidvaniaSystem/Nodes/RoomInstance.tscn" id="2_1wsgr"]
[ext_resource type="Script" uid="uid://b7pv3c2a3ryd0" path="res://src/dino/pickups/DropData.gd" id="2_c5djv"]
[ext_resource type="Texture2D" uid="uid://bv6gfgk3kvhbq" path="res://assets/art/ui/spaceship_background.png" id="2_dw7vg"]
[ext_resource type="Script" uid="uid://bjogm7itlynkj" path="res://src/dino/vania/VaniaRoomDef.gd" id="2_sq332"]
[ext_resource type="Script" uid="uid://dysexmhlgdsfc" path="res://src/dino/vania/MapInput.gd" id="3_1w2s4"]
[ext_resource type="Script" uid="uid://cquwjbsn86j01" path="res://src/dino/entities/DinoEntity.gd" id="3_tseep"]
[ext_resource type="Script" uid="uid://bq5yaw6bjckmh" path="res://src/dino/enemies/DinoEnemy.gd" id="3_ybglw"]
[ext_resource type="Script" uid="uid://b15t1qi4pwthj" path="res://src/dino/tiles/DinoTiles.gd" id="4_2y0uv"]
[ext_resource type="Script" uid="uid://bvg8smcilg3cp" path="res://src/dino/vania/RoomEffect.gd" id="5_86tbv"]
[ext_resource type="Script" uid="uid://y1x7ua8kadfy" path="res://src/dino/vania/RoomShape.gd" id="6_kudew"]
[ext_resource type="Script" uid="uid://xtk7id1pn0ed" path="res://src/dino/tiles/DinoTileMap.gd" id="6_q8wsp"]
[ext_resource type="TileSet" uid="uid://dgkfewk2df8x7" path="res://src/tilemaps/metal/MetalTiles8.tres" id="10_pkkaw"]

[sub_resource type="Resource" id="Resource_u5y3n"]
script = ExtResource("3_tseep")
_id = "158"

[sub_resource type="Resource" id="Resource_paglq"]
script = ExtResource("3_tseep")
_id = "147"

[sub_resource type="Resource" id="Resource_yskg4"]
script = ExtResource("4_2y0uv")
_id = "185"

[sub_resource type="Resource" id="Resource_ngq3l"]
script = ExtResource("3_1w2s4")
genre = 0
entities = Array[ExtResource("3_tseep")]([SubResource("Resource_u5y3n"), SubResource("Resource_paglq")])
enemies = Array[ExtResource("3_ybglw")]([])
enemy_waves = 0
room_shapes = Array[ExtResource("6_kudew")]([])
room_effects = Array[ExtResource("5_86tbv")]([])
tiles = Array[ExtResource("4_2y0uv")]([SubResource("Resource_yskg4")])
door_mode = 0
neighbor_direction = Vector2i(0, 0)
skip_borders = Array[Vector2i]([Vector2i(0, -1), Vector2i(-1, 0)])
drops = Array[ExtResource("2_c5djv")]([])
bg_color = Color(0.774941, 0.436213, 0.239675, 1)
dupe_room_count = 0
skip_merge = false
grids_path = ""

[sub_resource type="Resource" id="Resource_q4s3t"]
script = ExtResource("2_sq332")
input = SubResource("Resource_ngq3l")

[sub_resource type="NavigationPolygon" id="NavigationPolygon_61itp"]
vertices = PackedVector2Array(522, -10, 246, -10, 523, -19, -19, 307, -10, 128, -10, 298, 532, 302, 522, 298, 470, 246, 42, 246, 42, 42, 470, 42)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2), PackedInt32Array(3, 4, 5), PackedInt32Array(0, 2, 6, 7), PackedInt32Array(7, 6, 3, 5), PackedInt32Array(8, 9, 10, 11)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-12, -11, 533, -30, 543, 312, -30, 318)])
source_geometry_mode = 1
source_geometry_group_name = &"navigation_sources"

[node name="VaniaRoom" type="Node2D"]
script = ExtResource("1_x4efj")
is_debug = true
debug_room_def = SubResource("Resource_q4s3t")
metadata/_edit_vertical_guides_ = [8.0]

[node name="BGColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
z_index = -10
offset_left = -765.0
offset_top = -601.0
offset_right = 2746.0
offset_bottom = 1402.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 511.0
offset_bottom = 288.0
texture = ExtResource("2_dw7vg")
stretch_mode = 1

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.533333, 0.533333, 0.533333, 1)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
rotation = -0.116937
energy = 0.3
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 0.4
height = 0.15

[node name="RoomInstance" parent="." instance=ExtResource("2_1wsgr")]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_61itp")

[node name="TileMap" type="TileMapLayer" parent="." groups=["navigation_sources"]]
tile_set = ExtResource("10_pkkaw")
script = ExtResource("6_q8wsp")

[node name="BackgroundTileMap" type="TileMapLayer" parent="."]
script = ExtResource("6_q8wsp")
